# Pagor

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: catkin.cmake  glog.cmake  pcl.cmake
configs/: pagor.yaml  segregator.yaml
data_split/kitti/: kitti00_10to15.txt  kitti00_3to5.txt  kitti00_8to10.txt  kitti05_10to15.txt  kitti05_3to5.txt  kitti05_8to10.txt  kitti06_10to15.txt  kitti06_3to5.txt  kitti06_8to10.txt  kitti07_10to15.txt  kitti07_3to5.txt  kitti07_8to10.txt  kitti08_10to15.txt  kitti08_3to5.txt  kitti08_8to10.txt
examples/: kitti_bm.cpp
include/: CommonFunc.h  file_manager.hpp  kitti_benchmark.h  kitti_loader.h
pagor/: CMakeLists.txt  package.xml
pagor/cmake/: boost.cmake  eigen.cmake  glog.cmake  openmp.cmake  pcl.cmake
pagor/include/: CommonFunc.h
pagor/include/clipper/: clipper.h  types.h  utils.h
pagor/include/clipper/invariants/: abstract.h  builtins.h  euclidean_distance.h  euclidean_distance_relax.h  wasserstein_distance_relax.h
pagor/include/estimator/: point2pointFactor.h  solve_icp.h
pagor/src/: clipper.cpp  utils.cpp
pagor/src/invariants/: builtins.cpp  euclidean_distance.cpp  euclidean_distance_relax.cpp  wasserstein_distance_relax.cpp
src/: kitti_benchmark.cpp
